--- a/Blog_Application/blog/templates/blog/post/detail.html
+++ b/Blog_Application/blog/templates/blog/post/detail.html
@@ -13,6 +13,25 @@
       Share this post
     </a>
   </p>
-
   <p><a href="{% url 'blog:post_list' %}">&laquo; All Posts</a></p>
+
+  {% with comments.count as total_comments %}
+    <h2>
+      {{ total_comments }} comment{{ total_comments|pluralize }}
+    </h2>
+  {% endwith %}
+  
+  {% for comment in comments %}
+    <div class="comment">
+      <p class="info">
+        Comment {{ forloop.counter }} by {{ comment.name }}
+        {{ comment.created }}
+      </p>
+      {{ comment.body|linebreaks }}
+    </div>
+  {% empty %}
+    <p>There are no comments.</p>
+  {% endfor %}
+
+  {% include 'blog/post/includes/comment_form.html' %}
 {% endblock content %}
