--- a/Blog_Application/blog/templates/blog/post/list.html
+++ b/Blog_Application/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load blog_tags %}
 
 {% block title %}My Blog{% endblock title %} 
 
@@ -7,7 +8,7 @@
   <h1>My Blog</h1>
 
   {% if tag %}
-    <h2>Posts tagged with "{{ tag.name }}</h2>
+    <h2>Posts tagged with "{{ tag.name }}"</h2>
   {% endif %}
 
   {% for post in posts %}
@@ -29,7 +30,7 @@
     <p class="date">
       Published {{ post.publish }} by {{ post.author }}
     </p>
-    {{ post.body|truncatewords:30|linebreaks }}
+    {{ post.body|markdown|truncatewords_html:30 }}
   {% endfor %}
 
   {% include 'pagination.html' with page=posts %}
