--- a/Blog_Application/blog/templates/blog/base.html
+++ b/Blog_Application/blog/templates/blog/base.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
   </head>
   <body>
+    <p>
+      <h1>
+        <a href="{% url 'blog:post_list' %}">Home</a>  
+      </h1>
+    </p>
     <div id="content">
+      <a href="{% url 'blog:post_search' %}">Search</a>
       {% block content %}
       {% endblock content %}
     </div>
