--- a/Social_Website/account/templates/account/dashboard.html
+++ b/Social_Website/account/templates/account/dashboard.html
@@ -4,5 +4,9 @@
 
 {% block content %}
   <h1>Dashboard</h1>
-  <p>Welcom to your dashboard.</p>
+  <p>
+    Welcom to your dashboard.
+    You can <a href="{% url 'edit' %}">edit your profile</a>
+    or <a href="{% url 'password_change' %}">change your password</a>.
+  </p>
 {% endblock content %}
