--- a/Social_Website/account/templates/account/dashboard.html
+++ b/Social_Website/account/templates/account/dashboard.html
@@ -9,4 +9,13 @@
     You can <a href="{% url 'edit' %}">edit your profile</a>
     or <a href="{% url 'password_change' %}">change your password</a>.
   </p>
+  
+  {% if request.user.is_authenticated %}
+    <p><img src="{{ request.user.profile.photo.url }}" alt="Photo"></p>
+    <p>Username: {{ request.user.username }}</p>
+    <p>First name: {{ request.user.first_name }}</p>
+    <p>Last name: {{ request.user.last_name }}</p>
+    <p>Email: {{ request.user.email }}</p>
+    <p>Date of birth: {{ request.user.profile.date_of_birth }}</p>
+  {% endif %}
 {% endblock content %}
