--- a/Social_Website/account/templates/account/dashboard.html
+++ b/Social_Website/account/templates/account/dashboard.html
@@ -7,8 +7,8 @@
   <h1>Dashboard</h1>
   <p>
     Welcom to your dashboard.
-    You can <a href="{% url 'edit' %}">edit your profile</a>
-    or <a href="{% url 'password_change' %}">change your password</a>.
+    You can <a href="{% url 'edit' %}">Edit your profile</a>
+    or <a href="{% url 'password_change' %}">Change your password</a>.
   </p>
   
   {% if request.user.is_authenticated %}
