--- a/Social_Website/account/templates/account/edit.html
+++ b/Social_Website/account/templates/account/edit.html
@@ -1,14 +1,26 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Edit your account{% endblock title %}
 
 {% block content %}
+
   <h1>Edit your account</h1>
+
   <p>You can edit your account using the following form:</p>
+
+  <!-- Profile photo -->
+    {% if request.user.profile.photo %}
+      <p><img src="{{ user.profile.photo.url }}" style="height: 250px; width: 250px; border-radius: 50%;"></p>
+    {% else %}
+      <p><img src="{% static 'images/default_img.png' %}" style="height: 250px; width: 250px; border-radius: 50%;"></p>
+    {% endif %}
+
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ user_form.as_p }}
     {{ profile_form.as_p }}
     <p><input type="submit" value="Save changes"></p>
   </form>
+
 {% endblock content %}
