--- a/Social_Website/account/templates/base.html
+++ b/Social_Website/account/templates/base.html
@@ -56,7 +56,7 @@
       document.addEventListener('DOMContentLoaded', (event) => {
         // DOM loaded
         {% block domready %}
-        {% endblock %}
+        {% endblock domready %}
       })
     </script>
   </body>
