--- a/Social_Website/images/templates/images/image/detail.html
+++ b/Social_Website/images/templates/images/image/detail.html
@@ -3,7 +3,6 @@
 {% block title %}{{ image.title }}{% endblock title %}
 
 {% block content %}
-
   <h1>{{ image.title }}</h1>
   {% load thumbnail %}
   <a href="{{ image.image.url }}">
@@ -39,5 +38,45 @@
       {% endfor %}
     </div>
   {% endwith %}
-
 {% endblock content %}
+
+{% block domready %}
+  const url = '{% url "images:like" %}';
+  var options = {
+    method: 'POST',
+    headers: {'X-CSRFToken': csrftoken},
+    mode: 'same-origin'
+  }
+
+  document.querySelector('a.like')
+          .addEventListener('click', function(e){
+    e.preventDefault();
+    var likeButton = this;
+
+    // add request body
+    var formData = new FormData();
+    formData.append('id', likeButton.dataset.id);
+    formData.append('action', likeButton.dataset.action);
+    options['body'] = formData;
+
+    // send HTTP request
+    fetch(url, options)
+    .then(response => response.json())
+    .then(data => {
+      if (data['status'] === 'ok')
+      {
+        var previousAction = likeButton.dataset.action;
+
+        // toggle button text and data-action
+        var action = previousAction === 'like' ? 'unlike' : 'like';
+        likeButton.dataset.action = action;
+        likeButton.innerHTML = action;
+
+        // update like count
+        var likeCount = document.querySelector('span.count .total');
+        var totalLikes = parseInt(likeCount.innerHTML);
+        likeCount.innerHTML = previousAction === 'like' ? totalLikes + 1 : totalLikes - 1;
+      }
+    })
+  });
+{% endblock domready %}
