--- a/Social_Website/images/templates/images/image/detail.html
+++ b/Social_Website/images/templates/images/image/detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}{{ image.title }}{% endblock title %}
 
 {% block content %}
@@ -28,10 +30,19 @@
     <div class="image-likes">
       {% for user in image.users_like.all %}
         <div>
+          
           {% if user.profile.photo %}
             <img src="{{ user.profile.photo.url }}" alt="">
+          {% else %}
+          <p><img src="{% static 'images/default_img.png' %}" style="height: 100px; width: 100px; border-radius: 50%;"></p>
           {% endif %}
-          <p>{{ user.first_name }}</p>
+
+          {% if user.first_name %}
+            <p>{{ user.first_name }}</p>
+          {% else %}
+            <p>{{ user.username }}</p>
+          {% endif %}
+          
         </div>
       {% empty %}
         Nobody likes this image yet.
