--- a/Social_Website/images/templates/images/image/ranking.html
+++ b/Social_Website/images/templates/images/image/ranking.html
@@ -8,7 +8,8 @@
     {% for image in most_viewed %}
       <li>
         <a href="{{ image.get_absolute_url }}">
-          {{ image.title }}
+          <p><img src="{{ image.url }}" width="150px" height="150px"></p>
+          <p>{{ image.title }}</p>
         </a>
       </li>
     {% endfor %}
