Chapter08 <Building a shopping cart>

--- a/Online_Shop/shop/templates/shop/product/detail.html
+++ b/Online_Shop/shop/templates/shop/product/detail.html
@@ -15,6 +15,13 @@
       </a>
     </h2>
     <p class="price">${{ product.price }}</p>
+    <form action="{% url 'cart:cart_add' product.id %}" method="post">
+      {% csrf_token %}
+      {{ cart_product_form }}
+      <br>
+      <input type="submit" value="Add to cart">
+    </form>
+    <br>
     {{ product.description|linebreaks }}
   </div>
 
