Chapter11: Translating templates
The {% translate %} template tag
The {% blocktranslate %} template tag
Translating the shop templates

--- a/Online_Shop/shop/templates/shop/product/detail.html
+++ b/Online_Shop/shop/templates/shop/product/detail.html
@@ -1,5 +1,5 @@
 {% extends "shop/base.html" %}
-{% load static %}
+{% load i18n static %}
 
 {% block title %}{{ product.name }}{% endblock title %}
 
@@ -19,14 +19,14 @@
       {% csrf_token %}
       {{ cart_product_form }}
       <br>
-      <input type="submit" value="Add to cart">
+      <input type="submit" value="{% translate 'Add to cart' %}">
     </form>
     <br>
     {{ product.description|linebreaks }}
 
     {% if recommended_products %}
       <div class="recommendations">
-        <h3>People who bought this also bought</h3>
+        <h3>{% translate "People who bought this also bought" %}</h3>
         {% for p in recommended_products %}
           <div class="item">
             <a href="{{ p.get_absolute_url }}">
