Chapter11: Allowing users to switch language

--- a/Online_Shop/cart/templates/cart/detail.html
+++ b/Online_Shop/cart/templates/cart/detail.html
@@ -1,19 +1,21 @@
 {% extends "shop/base.html" %}
-{% load static %}
+{% load i18n static %}
 
-{% block title %}Your shopping cart{% endblock title %} 
+{% block title %}
+  {% translate "Your shopping cart" %}
+{% endblock %} 
 
 {% block content %}
-  <h1>Your shopping cart</h1>
+  <h1>{% translate "Your shopping cart" %}</h1>
   <table class="cart">
     <thead>
       <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Remove</th>
-        <th>Unit price</th>
-        <th>Price</th>
+        <th>{% translate "Image" %}</th>
+        <th>{% translate "Product" %}</th>
+        <th>{% translate "Quantity" %}</th>
+        <th>{% translate "Remove" %}</th>
+        <th>{% translate "Unit price" %}</th>
+        <th>{% translate "Price" %}</th>
       </tr>
     </thead>
     <tbody>
@@ -48,14 +50,15 @@
       {% endfor %}
       {% if cart.coupon %}
         <tr class="subtotal">
-          <td>Subtotal</td>
+          <td>{% translate "Subtotal" %}</td>
           <td colspan="4"></td>
           <td class="num">${{ cart.get_total_price|floatformat:2 }}</td>
         </tr>
         <tr>
           <td>
-            "{{ cart.coupon.code }}" coupon
-            ({{ cart.coupon.discount }}% off)
+            {% blocktranslate with code=cart.coupon.code discount=cart.coupon.discount %}
+              "{{ code }}" coupon ({{ discount }}% off)
+            {% endblocktranslate %}
           </td>
           <td colspan="4"></td>
           <td class="num neg">
@@ -75,7 +78,7 @@
 
   {% if recommended_products %}
     <div class="recommendations cart">
-      <h3>People who bought this also bought</h3>
+      <h3>{% translate "People who bought this also bought" %}</h3>
       {% for p in recommended_products %}
         <div class="item">
           <a href="{{ p.get_absolute_url }}">
@@ -88,17 +91,14 @@
     </div>
   {% endif %}
 
-  <p>Apply a coupon:</p>
+  <p>{% translate "Apply a coupon" %}:</p>
   <form action="{% url 'coupons:apply' %}" method="post">
     {% csrf_token %}
     {{ coupon_apply_form }} <br>
     <input type="submit" value="Apply">
   </form>
   <p class="text-right">
-    <a href="{% url 'shop:product_list' %}" class="button 
-    light">Continue shopping</a>
-    <a href="{% url 'orders:order_create' %}" class="button">
-      Checkout
-    </a>
+    <a href="{% url 'shop:product_list' %}" class="button light">{% translate "Continue shopping" %}</a>
+    <a href="{% url 'orders:order_create' %}" class="button">{% translate "Checkout" %}</a>
   </p>
 {% endblock content %}
