--- a/Online_Shop/payment/templates/payment/process.html
+++ b/Online_Shop/payment/templates/payment/process.html
@@ -1,18 +1,18 @@
 {% extends 'shop/base.html' %}
-{% load static %}
+{% load i18n static %}
 
-{% block title %}Pay your order{% endblock title %}
+{% block title %}{% translate "Pay your order" %}{% endblock %}
 
 {% block content %}
-  <h1>Order summary</h1>
+  <h1>{% translate "Order summary" %}</h1>
   <table>
     <thead>
       <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Total</th>
+        <th>{% translate "Image" %}</th>
+        <th>{% translate "Product" %}</th>
+        <th>{% translate "Price" %}</th>
+        <th>{% translate "Quantity" %}</th>
+        <th>{% translate "Total" %}</th>
       </tr>
     </thead>
     <tbody>
@@ -31,7 +31,7 @@
 
       {% if order.coupon %}
         <tr class="subtotal">
-          <td>Subtotal</td>
+          <td>{% translate "Subtotal" %}</td>
           <td colspan="3"></td>
           <td class="num">
             ${{ order.get_total_cost_before_discount|floatformat:2 }}
@@ -39,8 +39,9 @@
         </tr>
         <tr>
           <td>
-            "{{ order.coupon.code }}" coupon
-            ({{ order.discount }}% off)
+            {% blocktranslate with code=order.coupon.code discount=order.discount %}
+              "{{ code }}" ({{ discount }}% off)
+            {% endblocktranslate %}
           </td>
           <td colspan="3"></td>
           <td class="num neg">
@@ -50,7 +51,8 @@
       {% endif %}
       
       <tr class="total">
-        <td colspan="4">Total</td>
+        <td>{% translate "Total" %}</td>
+        <td colspan="3"></td>
         <td class="num">
           ${{ order.get_total_cost|floatformat:2 }}
         </td>
