--- a/Online_Shop/shop/templates/shop/base.html
+++ b/Online_Shop/shop/templates/shop/base.html
@@ -9,9 +9,27 @@
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
+  
   <div id="header">
     <a href="/" class="logo">{% translate "My shop" %}</a>
+    {% get_current_language as LANGUAGE_CODE %}
+    {% get_available_languages as LANGUAGES %}
+    {% get_language_info_list for LANGUAGES as languages %}
+    <div class="languages">
+      <p>{% translate "Language" %}:</p>
+      <ul class="languages">
+        {% for language in languages %}
+          <li>
+            <a href="/{{ language.code }}/"
+            {% if language.code == LANGUAGE_CODE %} class="selected"{% endif %}>
+              {{ language.name_local }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
+
   <div id="subheader">
     <div class="cart">
       {% with total_items=cart|length %}
@@ -30,9 +48,11 @@
       {% endwith %}
     </div>
   </div>
+
   <div id="content">
     {% block content %}
     {% endblock content %}
   </div>
+
 </body>
 </html>
