Chapter13: Reordering modules and their contents
Using mixins from django-braces
End chapter13

--- a/E-Learning_Platform/courses/templates/base.html
+++ b/E-Learning_Platform/courses/templates/base.html
@@ -28,6 +28,10 @@
       {% block content %}
       {% endblock %}
     </div>
+    <div>
+      {% block include_js %}
+      {% endblock %}
+    </div>
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         // DOM loaded
